--- a/laba_1/laba_1.vcxproj
+++ b/laba_1/laba_1.vcxproj
@@ -129,6 +129,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="rab1.cpp" />
+    <ClCompile Include="rad2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
