--- a/laba_1/laba_1.vcxproj.filters
+++ b/laba_1/laba_1.vcxproj.filters
@@ -15,6 +15,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="rad2.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
     <ClCompile Include="rab1.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
